force-app/main/default/objects/Student_Master__c/Student_Master__c.object-meta.xml
<CustomObject>
    <label>Student Master</label>
    <nameField>
        <label>Student Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Student Masters</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>