force-app/main/default/objects/Student_Master__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Student Masters</relationshipLabel>
    <relationshipName>Student_Masters</relationshipName>
    <type>Lookup</type>
</CustomField>