force-app/main/default/objects/Student_Master__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <externalId>true</externalId>
    <label>Address</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>