force-app/main/default/objects/Student_Master__c/fields/Age_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Age_Calculation__c</fullName>
    <formula>CEILING((Today()- DOB__c)/365 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age_Calculation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>