force-app/main/default/objects/Student_Master__c/fields/Average_Students_Marks__c.field-meta.xml
<CustomField>
    <fullName>Average_Students_Marks__c</fullName>
    <formula>Total_Marks__c  /  Number_of_Subjects__c</formula>
    <label>Average Students Marks</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>