force-app/main/default/objects/Student_Master__c/fields/Candidate_Passed__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Passed__c</fullName>
    <description>Students will be marked as passed when they get marks more than 40.</description>
    <formula>Total_Marks__c &gt;=40</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If students marks is &gt; 40 then they pass.</inlineHelpText>
    <label>Candidate Passed</label>
    <type>Checkbox</type>
</CustomField>