force-app/main/default/objects/Student_Master__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Citizen</fullName>
            </value>
            <value>
                <fullName>Foreigner</fullName>
            </value>
            <value>
                <fullName>Global courses</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>