force-app/main/default/objects/Student_Master__c/fields/Full_Age__c.field-meta.xml
<CustomField>
    <fullName>Full_Age__c</fullName>
    <inlineHelpText>Age should be greater than 0 and should be less than 150 years.</inlineHelpText>
    <label>Full Age</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>