force-app/main/default/objects/Student_Master__c/fields/Latest_Full_Age__c.field-meta.xml
<CustomField>
    <fullName>Latest_Full_Age__c</fullName>
    <inlineHelpText>Age should be greater than 0 and should be less than 120 years.</inlineHelpText>
    <label>Latest Full Age</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>