force-app/main/default/objects/Student_Master__c/fields/Masked__c.field-meta.xml
<CustomField>
    <fullName>Masked__c</fullName>
    <label>Masked</label>
    <length>16</length>
    <maskChar>asterisk</maskChar>
    <maskType>creditCard</maskType>
    <type>EncryptedText</type>
</CustomField>