force-app/main/default/objects/Student_Master__c/fields/Multi_Select__c.field-meta.xml
<CustomField>
    <fullName>Multi_Select__c</fullName>
    <label>Multi Select</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>Amazon</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Kubernates</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>