force-app/main/default/objects/Student_Master__c/fields/New_Age__c.field-meta.xml
<CustomField>
    <fullName>New_Age__c</fullName>
    <formula>IF(Age__c = 17, 18, Age__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>