force-app/main/default/objects/Student_Master__c/fields/Number_of_Student_Requests__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Student_Requests__c</fullName>
    <label>Number of Student Requests</label>
    <summaryForeignKey>Student_Request__c.Student_Master__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>