force-app/main/default/objects/Student_Master__c/fields/Number_of_Subjects__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Subjects__c</fullName>
    <label>Number of Subjects</label>
    <summaryFilterItems>
        <field>Student_Marks__c.Marks__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Student_Marks__c.Student_Master__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>