force-app/main/default/objects/Student_Master__c/fields/Parent_Student_Master__c.field-meta.xml
<CustomField>
    <fullName>Parent_Student_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Student Master</label>
    <referenceTo>Student_Master__c</referenceTo>
    <relationshipLabel>Parent Student Master</relationshipLabel>
    <relationshipName>Student_Masters</relationshipName>
    <type>Lookup</type>
</CustomField>