force-app/main/default/objects/Student_Master__c/fields/Plain_Text__c.field-meta.xml
<CustomField>
    <fullName>Plain_Text__c</fullName>
    <label>Plain Text</label>
    <length>100</length>
    <type>Text</type>
</CustomField>