force-app/main/default/objects/Student_Master__c/fields/RS__c.field-meta.xml
<CustomField>
    <fullName>RS__c</fullName>
    <label>RS</label>
    <summarizedField>Student_Marks__c.Marks__c</summarizedField>
    <summaryForeignKey>Student_Marks__c.Student_Master__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>