force-app/main/default/objects/Student_Master__c/fields/Status_of_Approval__c.field-meta.xml
<CustomField>
    <fullName>Status_of_Approval__c</fullName>
    <label>Status of Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>test 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>