force-app/main/default/objects/Student_Master__c/fields/Student_Identity__c.field-meta.xml
<CustomField>
    <fullName>Student_Identity__c</fullName>
    <label>Student Identity</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>