force-app/main/default/objects/Student_Master__c/fields/Student_Name_location__c.field-meta.xml
<CustomField>
    <fullName>Student_Name_location__c</fullName>
    <formula>Name  + &apos; - &apos; +   Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Student Name location</label>
    <type>Text</type>
</CustomField>