force-app/main/default/objects/Student_Master__c/fields/Student_Passed__c.field-meta.xml
<CustomField>
    <fullName>Student_Passed__c</fullName>
    <formula>IF( Average_Students_Marks__c &gt; 40, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Student Passed</label>
    <type>Checkbox</type>
</CustomField>