force-app/main/default/objects/Student_Master__c/fields/Sub_Status_of_Approval__c.field-meta.xml
<CustomField>
    <fullName>Sub_Status_of_Approval__c</fullName>
    <label>Sub-Status of Approval</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status_of_Approval__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Test A</fullName>
            </value>
            <value>
                <fullName>Test B</fullName>
            </value>
            <value>
                <fullName>Test C</fullName>
            </value>
            <value>
                <fullName>Test D</fullName>
            </value>
            <value>
                <fullName>Test E</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>