force-app/main/default/objects/Student_Master__c/fields/Voting__c.field-meta.xml
<CustomField>
    <fullName>Voting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Voting</label>
    <type>Checkbox</type>
</CustomField>