force-app/main/default/objects/Student_Master__c/recordTypes/Counsellor.recordType-meta.xml
<RecordType>
    <fullName>Counsellor</fullName>
    <active>true</active>
    <label>Counsellor</label>
</RecordType>