force-app/main/default/objects/Student_Master__c/recordTypes/Professor.recordType-meta.xml
<RecordType>
    <fullName>Professor</fullName>
    <active>true</active>
    <label>Professor</label>
</RecordType>