force-app/main/default/objects/Student_Master__c/validationRules/Age_Less_than_120_years.validationRule-meta.xml
<ValidationRule>
    <fullName>Age_Less_than_120_years</fullName>
    <active>true</active>
    <errorConditionFormula>Age__c  &gt; 120</errorConditionFormula>
    <errorMessage>Age Should be Less than 120 years</errorMessage>
</ValidationRule>