force-app/main/default/objects/Student_Master__c/validationRules/DOB.validationRule-meta.xml
<ValidationRule>
    <fullName>DOB</fullName>
    <active>true</active>
    <errorConditionFormula>DOB__c  &gt;  TODAY()</errorConditionFormula>
    <errorMessage>Date of Birth cannot be greater than today.</errorMessage>
</ValidationRule>