force-app/main/default/objects/Student_Master__c/validationRules/Email_is_changed.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_is_changed</fullName>
    <active>true</active>
    <errorConditionFormula>AND (ISCHANGED( Email__c ), Address__c = &apos;California&apos;)</errorConditionFormula>
    <errorMessage>Should not be changing email address when the address is California.</errorMessage>
</ValidationRule>