force-app/main/default/objects/Student_Master__c/validationRules/New_VR.validationRule-meta.xml
<ValidationRule>
    <fullName>New_VR</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK( Age__c ),ISBLANK(DOB__c), ISNEW()  )</errorConditionFormula>
    <errorMessage>Age or DOB is required field</errorMessage>
</ValidationRule>