force-app/main/default/objects/Student_Master__c/validationRules/VR_for_New_York.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_for_New_York</fullName>
    <active>true</active>
    <description>VR for New York customers</description>
    <errorConditionFormula>AND (Address__c = &apos;New York&apos;,
OR(Email__c = null,
Email__c = &apos;test@gmail.com&apos;
)
)</errorConditionFormula>
    <errorMessage>When the Address is New York, you need to enter the email address.</errorMessage>
</ValidationRule>