force-app/main/default/objects/Student_Master__c/listViews/Edureka_22_Queue_Student_Master.listView-meta.xml
<ListView>
    <fullName>Edureka_22_Queue_Student_Master</fullName>
    <filterScope>Queue</filterScope>
    <label>Edureka 22 Queue</label>
    <queue>Edureka_22_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>