force-app/main/default/objects/Student_Master__c/listViews/Edureka_5_14_Student_Master.listView-meta.xml
<ListView>
    <fullName>Edureka_5_14_Student_Master</fullName>
    <filterScope>Queue</filterScope>
    <label>Edureka_5_14</label>
    <queue>Edureka_5_14</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>