force-app/main/default/objects/Student_Master__c/listViews/July2022_Student_Master.listView-meta.xml
<ListView>
    <fullName>July2022_Student_Master</fullName>
    <columns>NAME</columns>
    <columns>Age__c</columns>
    <columns>Phone__c</columns>
    <columns>Number_of_Subjects__c</columns>
    <columns>Skill__c</columns>
    <filterScope>Queue</filterScope>
    <label>July2022</label>
    <queue>July2022</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>