force-app/main/default/objects/Student_Master__c/listViews/Queue_19032023_Student_Master.listView-meta.xml
<ListView>
    <fullName>Queue_19032023_Student_Master</fullName>
    <filterScope>Queue</filterScope>
    <label>Queue 19032023</label>
    <queue>Queue_19032023</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>