force-app/main/default/objects/Student_Master__c/listViews/Queue_24_03_Student_Master.listView-meta.xml
<ListView>
    <fullName>Queue_24_03_Student_Master</fullName>
    <filterScope>Queue</filterScope>
    <label>Queue 24-03</label>
    <queue>Queue_24_03</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>