force-app/main/default/objects/Student_Master__c/listViews/Queue_8_Student_Master.listView-meta.xml
<ListView>
    <fullName>Queue_8_Student_Master</fullName>
    <filterScope>Queue</filterScope>
    <label>Queue 8</label>
    <queue>Queue_8</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>