force-app/main/default/objects/Student_Master__c/listViews/test_Queue_Student_Master.listView-meta.xml
<ListView>
    <fullName>test_Queue_Student_Master</fullName>
    <columns>NAME</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>contains</operation>
        <value>test</value>
    </filters>
    <label>test Queue</label>
    <queue>test_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>